Correct header and create the todo list

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -48,7 +48,7 @@
     <p>Time to learn all about Angular!</p>
 </header> -->
 <header>
-  <img src="/src/assets/task-management-logo.png"/>
+  <img src="assets/task-management-logo.png" alt="A todo list"/>
   <div>
     <h1>EasyTask</h1>
     <p>Enterpise-level task management without friction</p>
