--- a/src/app/app.html
+++ b/src/app/app.html
@@ -35,7 +35,8 @@
       />
     </li>
   </ul>
-  <app-tasks [name]="selectedUser.name"/>
+
+  <app-tasks [name]="selectedUser ? selectedUser.name : ''"/>
 </main>
 
 <router-outlet />
